# secret-image-sharing-scheme

./: .gitignore  README.md  pyproject.toml
app/: constants.py  main.py  utils.py
src/: bmp_file.py  distribute_image.py  main.py  polynomial.py  recover_image.py  utils.py  xd.py  z251.py
test/: test_bmp_file.py  test_distribute_image.py  test_polynomial.py  test_recover_image.py  test_z251.py
