[tool.poetry]
name = "secret-image-sharing-scheme"
version = "0.1.0"
description = ""
authors = ["Lucas Vittor <lvvittor@gmail.com>"]
readme = "README.md"
packages = [{include = "secret_image_sharing_scheme"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
